--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,22 @@
-__pycache__
-src/__pycache__
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+env/
+venv/
+.env
 
+# Build
+dist/
+build/
+*.egg-info/
+
+# IDEs
 .vscode/
+.idea/
+
+# Data
+*.csv
+*.png
